--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
+
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">New York</h2>
+        </div>
     </div>
 </body>
 </html>
