--- a/index.html
+++ b/index.html
@@ -35,10 +35,37 @@
                         <p>Wind Speed</p>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
+
+
+<script>
+
+const apiKey = "fdc60c470455a2ced54c787c389f2a43";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+
+async function checkWeather(){
+    const response = await fetch(apiUrl + `&appid=${apiKey}`);
+    var data = await response.json();
+
+    console.log(data)
+
+    document.querySelector(".city").innerHTML = data.name;
+    document.querySelector(".temp").innerHTML = data.main.temp;
+    document.querySelector(".humidity").innerHTML = data.main.humidity;
+    document.querySelector(".wind").innerHTML = data.wind.speed;
+}
+
+checkWeather()
+</script>
+
+
+
+
+
+
 </body>
 </html>
 
